--- a/part4/blog-BE/package.json
+++ b/part4/blog-BE/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "eslint": "^8.0.0",
+    "jest": "^27.2.5",
     "nodemon": "^2.0.13"
   }
 }
