--- a/part4/blog-BE/package.json
+++ b/part4/blog-BE/package.json
@@ -17,6 +17,7 @@
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "mongoose-unique-validator": "^3.0.0"
   },
