--- a/part7/blog-BE/package.json
+++ b/part7/blog-BE/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start:test": "cross-env NODE_ENV=test node index.js",
+    "dev:test": "cross-env NODE_ENV=test nodemon index.js",
     "test:e2e": "cypress run"
   },
   "author": "",
