--- a/part8/graphql-server/package.json
+++ b/part8/graphql-server/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.4.0",
+    "dotenv-flow": "^3.2.0",
     "graphql": "^15.6.1",
+    "mongoose": "^6.0.11",
+    "mongoose-unique-validator": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
