--- a/part8/graphql-server/package.json
+++ b/part8/graphql-server/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.4.0",
     "dotenv-flow": "^3.2.0",
     "graphql": "^15.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "mongoose-unique-validator": "^3.0.0",
     "uuid": "^8.3.2"
