--- a/part9/package.json
+++ b/part9/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculateBmi": "ts-node calculateBMI.ts",
+    "calculateExercise": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
