--- a/part9/package.json
+++ b/part9/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.11.1",
     "ts-node": "^10.3.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   }
 }
