--- a/part9/package.json
+++ b/part9/package.json
@@ -7,14 +7,21 @@
     "ts-node": "ts-node",
     "calculateBmi": "ts-node calculateBMI.ts",
     "calculateExercise": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.1",
     "ts-node": "^10.3.0",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
