--- a/part9/package.json
+++ b/part9/package.json
@@ -9,6 +9,7 @@
     "calculateExercise": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +17,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
