--- a/part9/patientor-be/tsconfig.json
+++ b/part9/patientor-be/tsconfig.json
@@ -9,6 +9,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true, 
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true                
+    "skipLibCheck": true,
+    "resolveJsonModule": true            
   }
 }
