--- a/part9/patientor-fe/.eslintrc
+++ b/part9/patientor-fe/.eslintrc
@@ -30,6 +30,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "part9/patientor-fe/tsconfig.json"
   }
 }
