--- a/part10/part4/reactnative-repo-app/package.json
+++ b/part10/part4/reactnative-repo-app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "dotenv": "^10.0.0",
     "expo": "~42.0.1",
+    "expo-linking": "^2.4.2",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "graphql": "^15.6.1",
@@ -21,8 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-web": "^0.17.5",
     "react-router-native": "^5.2.1",
-    "yup": "^0.32.11",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
